Projeto estruturado com HTML na raiz

--- a/inicio.html
+++ b/inicio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/ASSETS/CSS/style.css">
-    <script src="/ASSETS/JS/script.js" defer></script>
+    <link rel="stylesheet" href="./ASSETS/CSS/style.css">
+    <script src="./ASSETS/JS/script.js" defer></script>
 </head>
 <body>
     <!-- INICIO CABEÇALHO -->
@@ -13,11 +13,11 @@
         <div class="container">
             <nav>
                 <div class="img-logo">
-                    <img src="IMG/Logo.png" alt="">
+                    <img src="./ASSETS/IMG/Logo.png" alt="">
                 </div>
                 <ul>
-                    <li><a href="#Inicio">Inicio</a></li>
-                    <li><a href="/ASSETS-SEC/cronograma.html">Cronograma</a></li>
+                    <li><a href="./inicio.html">Inicio</a></li>
+                    <li><a href="./cronograma.html">Cronograma</a></li>
                     <li><a href="#Pendentes">Pendentes</a></li>
                     <li><a href="#Meu Perfil">Meu Perfil</a></li>
                     <li><a href="#Configurações">Configurações</a></li>
