--- a/cronograma.html
+++ b/cronograma.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/ASSETS-SEC/CSS/style.css">
-    <script src="/ASSETS-SEC/JS/script.js" defer></script>
+    <link rel="stylesheet" href="./ASSETS-SEC/CSS/style.css">
+    <script src="./ASSETS-SEC/JS/script.js" defer></script>
 </head>
 <body>
     <!-- INICIO CABEÇALHO -->
@@ -13,18 +13,18 @@
         <div class="container">
             <nav>
                 <div class="img-logo">
-                    <img src="IMG/Logo.png" alt="">
+                    <img src="./ASSETS-SEC/IMG/Logo.png" alt="">
                 </div>
                 <ul>
-                    <li><a href="/ASSETS/inicio.html">Inicio</a></li>
-                    <li><a href="/ASSETS-SEC/cronograma.html" >Cronograma</a></li>
+                    <li><a href="./inicio.html">Inicio</a></li>
+                    <li><a href="./cronograma.html" >Cronograma</a></li>
                     <li><a href="#Pendentes">Pendentes</a></li>
                     <li><a href="#Meu Perfil">Meu Perfil</a></li>
                     <li><a href="#Configurações">Configurações</a></li>
                 </ul>
                 <div class="search-container">
                     <input type="text" class="search-input" placeholder="Pesquisar" />
-                    <button class="search-button" id="searchBtn"> <img src="/ASSETS-SEC/IMG/lupa.png" alt=""></button>
+                    <button class="search-button" id="searchBtn"> <img src="./ASSETS/IMG/lupa.png" alt=""></button>
                 </div>
             </nav>
         </div>
