Renomeadas as pastas para letras minúsculas e corrigidos os caminhos

--- a/cronograma.html
+++ b/cronograma.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS-SEC/style.css">
-    <script src="/JS-SEC/script.js" defer></script>
+    <link rel="stylesheet" href="./CSS-SEC/style.css">
+    <script src="./JS-SEC/script.js" defer></script>
 </head>
 <body>
     <!-- INICIO CABEÇALHO -->
@@ -13,7 +13,7 @@
         <div class="container">
             <nav>
                 <div class="img-logo">
-                    <img src="IMG/Logo.png" alt="">
+                    <img src="./IMG-SEC/Logo.png" alt="">
                 </div>
                 <ul>
                     <li><a href="./inicio.html">Inicio</a></li>
@@ -24,7 +24,7 @@
                 </ul>
                 <div class="search-container">
                     <input type="text" class="search-input" placeholder="Pesquisar" />
-                    <button class="search-button" id="searchBtn"> <img src="IMG/lupa.png" alt=""></button>
+                    <button class="search-button" id="searchBtn"> <img src="./IMG-SEC/lupa.png" alt=""></button>
                 </div>
             </nav>
         </div>
